<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8AFFD"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/simpleCalculator"
        android:layout_width="417dp"
        android:layout_height="60dp"
        android:background="#F2FF7E"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:paddingTop="10dp"
        android:text="@string/app_simplecalculator"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleCalculator"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/test" />

    <EditText
        android:id="@+id/number1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#F4CECE"
        android:ems="10"
        android:hint="@string/app_num1"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#F4CECE"
        android:ems="10"
        android:hint="@string/app_num2"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number1"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="389dp"
        android:layout_height="34dp"
        android:text="@string/app_Result"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number2"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="71dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Result"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:backgroundTint="#F2FF7E"
            android:text="@string/app_add"
            android:textColor="#050505"
            android:textSize="11sp" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="#F2FF7E"
            android:text="@string/app_subtract"
            android:textColor="#050505"
            android:textSize="11sp" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="#F2FF7E"
            android:text="@string/app_Multiply"
            android:textColor="#050505"
            android:textSize="11sp" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="#F2FF7E"
            android:text="@string/app_divide"
            android:textColor="#050505"
            android:textSize="11sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>